Stolen record checklist (#946)

--- a/app/views/bikes/_theft_alerts_table.html.haml
+++ b/app/views/bikes/_theft_alerts_table.html.haml
@@ -6,7 +6,7 @@
       %h3
         Existing Theft Alerts
     .row
-      .col-md-12
+      .col-sm-12
         %table.table.table-bordered{ style: "background: #fff;" }
           %thead.small-header
             %tr
