Add locale form to site footer

--- a/app/assets/stylesheets/revised/sections/primary_footer.scss
+++ b/app/assets/stylesheets/revised/sections/primary_footer.scss
@@ -30,6 +30,13 @@ $primary-footer-top-margin: 6 * $vertical-height;
     }
   }
 
+  .locale-form {
+    font-size: 12px;
+    label {
+      margin-right: 5px;
+    }
+  }
+
   .primary-footer-nav {
     background: $gray-dark;
 
