--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -70,18 +70,32 @@
                     </g>
                   </svg>
 
-
   %nav.terms-and-stuff
     .container
-      %p
-        - if current_user.present? && current_user.has_membership?
-          #{link_to "Privacy policy", privacy_path}, #{link_to "vendor terms", vendor_terms_path}
-        - else
-          #{link_to "Privacy policy", privacy_path}
-        and #{link_to "terms and conditions", terms_path}.
-      %p
-        %span{data: {license: "https://github.com/bikeindex/bike_index/blob/master/LICENSE"}}
-          #{Time.current.year} &copy; Bike Index, a 501(c)(3) nonprofit - EIN 81-4296194
+      .row
+        .col-md-6.text-left
+          - if Flipper.enabled?(:localization, current_user)
+            = form_tag nil, method: :get, class: "locale-form" do
+              .row
+                .form-group
+                  = label_tag(:locale, "Language")
+                  = select_tag(:locale,
+                  options_for_select(language_choices, selected: I18n.locale),
+                  class: "form-control-sm",
+                  onchange: "this.form.submit()")
+          - else
+            &nbsp;
+        .col-md-6.text-right
+          %p
+            - if current_user.present? && current_user.has_membership?
+              #{link_to "Privacy policy", privacy_path}, #{link_to "vendor terms", vendor_terms_path}
+            - else
+              #{link_to "Privacy policy", privacy_path}
+            and #{link_to "terms and conditions", terms_path}.
+          %p
+            %span{data: {license: "https://github.com/bikeindex/bike_index/blob/master/LICENSE"}}
+              #{Time.current.year} &copy; Bike Index, a 501(c)(3) nonprofit - EIN 81-4296194
+
 - cache 'facebook_pixel' do
   = render '/shared/facebook_pixel'
 
