--- a/app/views/bikes/_theft_alerts_table.html.haml
+++ b/app/views/bikes/_theft_alerts_table.html.haml
@@ -15,7 +15,7 @@
               %th Status
               %th Start
               %th End
-              %th Post
+              / %th Post
 
           %tbody
             - theft_alerts.each do |alert|
@@ -25,4 +25,4 @@
                 %td= alert.status
                 %td.convertTime= l(alert.begin_at, format: :convert_time) if alert.begin_at.present?
                 %td.convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
-                %td= link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
+                / # %td= link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
