--- a/app/views/organized/manage/index.html.haml
+++ b/app/views/organized/manage/index.html.haml
@@ -65,4 +65,4 @@
       I would like to terminate my account with Bike Index
   #delete-organization.collapse
     .text-md-center
-      = link_to 'Delete organization', organization_manage_path(id: current_organization.id, organization_id: current_organization.to_param), method: :delete, confirm: "Are you positive you want to remove #{current_organization.name} from Bike Index?", class: 'btn btn-danger'
+      = link_to 'Delete organization', organization_manage_path(id: current_organization.id, organization_id: current_organization.to_param), method: :delete, data: { confirm: "Are you positive you want to remove #{current_organization.name} from Bike Index?" }, class: 'btn btn-danger'
