--- a/app/views/admin/theft_alerts/index.html.haml
+++ b/app/views/admin/theft_alerts/index.html.haml
@@ -3,10 +3,10 @@
     %h1 Theft Alerts
 
 .full-screen-table
-  %table.table.table-striped.table-bordered.ambassador-tasks-table
+  %table.table.table-striped.table-bordered.table-sm
     %thead.small-header
       %tr
-        %th Created at
+        %th Created
         %th Bike
         %th Creator
         %th Plan
@@ -19,29 +19,26 @@
       - @theft_alerts.each do |alert|
         %tr
           %td
-            = link_to edit_admin_theft_alert_path(alert) do
-              .convertTime= l(alert.created_at, format: :convert_time)
+            %span.convertTime= l(alert.created_at, format: :convert_time)
           %td
             - if alert.bike.present?
-              = link_to alert.bike.id, edit_admin_bike_path(alert.bike)
+              = link_to alert.bike.title_string, edit_admin_bike_path(alert.bike)
             - if alert.recovered?
               #{alert.bike.type} recovered
           %td
-            = link_to alert.creator.email, edit_admin_user_path(alert.creator.email)
+            = link_to alert.creator.display_name, edit_admin_user_path(alert.creator.to_param)
           %td
             - plan = alert.theft_alert_plan
             = link_to plan.title_string, edit_admin_theft_alert_plan_path(plan)
           %td
-            = link_to alert.status, edit_admin_theft_alert_path(alert)
+            = alert.status
           %td
-            = link_to edit_admin_theft_alert_path(alert) do
-              .convertTime= l(alert.begin_at, format: :convert_time) if alert.begin_at.present?
+            %span.convertTime= l(alert.begin_at, format: :convert_time) if alert.begin_at.present?
           %td
-            = link_to edit_admin_theft_alert_path(alert) do
-              .convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
+            %span.convertTime= l(alert.end_at, format: :convert_time) if alert.end_at.present?
           %td
-            = link_to "link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
+            = link_to "fbook link", alert.facebook_post_url, target: "_blank" if alert.facebook_post_url.present?
           %td
-            = link_to "Update", edit_admin_theft_alert_path(alert), class: "btn btn-info p-1"
+            = link_to "edit", edit_admin_theft_alert_path(alert), class: "btn btn-info p-1"
 
 = paginate @theft_alerts, views_prefix: "admin"
