--- a/app/views/admin/tweets/edit.html.haml
+++ b/app/views/admin/tweets/edit.html.haml
@@ -60,7 +60,7 @@
       = f.submit "Save", class: "btn btn-success"
       = link_to "Delete",
       { controller: "admin/tweets", id: @tweet.id, action: :destroy},
-      confirm: "Are you sure you want to delete this tweet?",
+      data: { confirm: "Are you sure you want to delete this tweet?" },
       method: :delete,
       class: "btn btn-danger"
 
