--- a/app/views/memberships/edit.html.haml
+++ b/app/views/memberships/edit.html.haml
@@ -1,23 +1,23 @@
 %h1
-  Edit membership for 
+  Edit membership for
   %em
     - if @user.name.present?
       = @user.name
-    - else 
+    - else
       = @user.email
 
 %p
   Joined Bike Index #{@user.created_at.strftime("%-m/%-d/%Y")}
 
 %section.full-screen-table.padded
-  %p 
+  %p
     Bikes indexed for
     %strong
       = @membership.organization.name
     by
     - if @user.name.present?
       = @user.name
-    - else 
+    - else
       = @user.email
   %table#org-bikes-table.table.table-striped.table-bordered
     %thead
@@ -54,7 +54,7 @@
             = bike.mnfg_name
           %td.large-screens
             = bike.primary_frame_color.name
-          
+
 
 %section.padded
   .well.span6.centered-form-well
@@ -63,7 +63,7 @@
 
     .form.form-horizontal.padded
       = form_for @membership do |f|
-       
+
         .control-group
           = f.label :role, class: "control-label"
           .controls.radio-controls
@@ -76,5 +76,4 @@
 
         .membership-actions.clearfix
           = f.submit 'Update role', class: 'button-green'
-          = link_to "Delete member", membership_url(@membership), method: :delete, confirm: "Are you sure you want to remove #{@user.email} from your organization?", class: "button-red"
-      
+          = link_to "Delete member", membership_url(@membership), method: :delete, data: { confirm: "Are you sure you want to remove #{@user.email} from your organization?" }, class: "button-red"
