--- a/app/views/users/organization_show.html.haml
+++ b/app/views/users/organization_show.html.haml
@@ -1,21 +1,21 @@
 %h1
   - if @user.name.present?
     = @user.name
-  - else 
+  - else
     = @user.email
 
 %p
   Joined the bike index #{@user.created_at.strftime("%-m/%-d/%Y")}
 
 %section.full-screen-table.padded
-  %p 
+  %p
     Bikes indexed for
     %strong
       = @membership.organization.name
     by
     - if @user.name.present?
       = @user.name
-    - else 
+    - else
       = @user.email
   %table#org-bikes-table.table.table-striped.table-bordered
     %thead
@@ -65,7 +65,7 @@
 
   .form.form-horizontal
     = form_for @membership do |f|
-     
+
       .control-group
         = f.label :role, class: "control-label"
         .controls.radio-controls
@@ -78,5 +78,4 @@
 
       .membership-actions
         = f.submit 'Update role', class: 'button-green'
-        = link_to "Delete member", membership_url(@membership), method: :delete, confirm: "Are you sure you want to remove #{@user.email} from your organization?", class: "button-red"
-    
+        = link_to "Delete member", membership_url(@membership), method: :delete, data: { confirm: "Are you sure you want to remove #{@user.email} from your organization?" }, class: "button-red"
