--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -1,94 +1,69 @@
 .d-none{ data: { url: ENV['BASE_URL'] } }
 = render partial: "/admin/bikes/bike", locals: { bike: @bike, target: "show" }
-.row
-  .col-md-6
-    %table.table-list
-      %tr
-        %td
-          Owner Email
-        %td
-          = @bike.owner_email
-      - if @bike.owner.present?
-        %tr
-          %td
-            Current Email
-          %td
-            = link_to @bike.owner.email, edit_admin_user_url(@bike.owner.id)
-        %tr
-          %td
-            Donor
-          %td
-            - if @bike.owner.donor?
-              TRUE!
-            - else
-              No
-        %tr
-          %td
-            Paid Org
-          %td
-            -if @bike.owner.paid_org?
-              - @bike.owner.organizations.paid.each do |organization|
-                <small>#{link_to organization.name, admin_organization_path(organization)}</small>
-            - else
-              %strong
-                Missing owner!
-  .col-md-6
-    %table.table-list
-      - if @bike.current_stolen_record.present?
-        %tr
-          %td
-            Phone
-          %td
-            = @bike.current_stolen_record.phone
-      %tr
-        %td
-          Creation
-        %td
-          - if @bike.creation_organization.present?
-            = link_to @bike.creation_organization.name, admin_organization_path(@bike.creation_organization)
-          - else
-            %small.less-strong
-              self reg
-          - if @bike.creation_description.present?
-            \-
-            %em
-              Via #{@bike.creation_description}
-      - if @bike.creation_state&.bulk_import.present?
-        %tr
-          %td
-            Import
-          %td
-            = link_to admin_bulk_import_path(@bike.creation_state.bulk_import.to_param) do
-              \##{@bike.creation_state.bulk_import_id}
-              - if @bike.creation_state.bulk_import.ascend?
-                %small
-                  Ascend
-      %tr
-        %td
-          Created
-        %td
-          %span.convertTime
-            = l @bike.created_at, format: :convert_time
-          %small.convertTimezone
-      %tr
-        %td
-          Updated
-        %td
-          %span.convertTime
-            = l @bike.updated_at, format: :convert_time
-      %tr
-        %td
-          Cached Data
-        %td
-          %em.less-strong
-            = @bike.cached_data
 
-%hr
+- if @bike.current_stolen_record.present? && @bike.current_stolen_record.theft_alerts.any?
+  %h4.mt-2
+    Theft Alerts
+  = render partial: "/admin/theft_alerts/table", locals: { theft_alerts: @bike.current_stolen_record.theft_alerts, skip_bike: true }
+
+- if @recoveries.any?
+  %h3.mt-4
+    Recoveries
+  = render partial: "/admin/recoveries/table", locals: { recoveries: @recoveries }
+
+%h3.mt-4
+  Ownerships
+.full-screen-table
+  %table.table.table-striped.table-bordered.table-sm
+    %thead.thead-light
+      %th.d-none.d-lg-table-cell
+        ID
+      %th
+        Created&nbsp;<small class="convertTimezone"></small>
+      %th
+        Creator
+      %th
+        Owner email
+      %th
+        Current?
+      %th
+        Claimed?
+      %th.d-none.d-md-table-cell
+        User hidden
+    %tbody
+      - @bike.ownerships.each do |ownership|
+        %tr
+          %td.d-none.d-lg-table-cell
+            = ownership.id
+          %td
+            %a.convertTime{href: edit_admin_ownership_url(ownership.id)}
+              = l ownership.created_at, format: :convert_time
+          %td
+            - u = ownership.creator
+            - if u.name.present?
+              = u.name
+            - else
+              = u.email
+          %td
+            = ownership.owner_email
+          %td.table-cell-check
+            = "&#x2713;".html_safe if ownership.current
+          %td.table-cell-check
+            = "&#x2713;".html_safe if ownership.claimed
+          %td.table-cell-check.d-none.d-md-table-cell
+            = "&#x2713;".html_safe if ownership.user_hidden
+
+.admin-subnav.midpage-subnav
+  .col-12
+    %h1
+      Edit Bike
+
 - if @bike.user_hidden
   %h2.text-danger.mb-4{ style: "margin-bottom: 2rem; text-align: center;" }
     Marked HIDDEN by the user
     %small
       no one but the user (and bike index admins) can see it
+
 = form_for [:admin, @bike], html: { class: 'form form-horizontal admin-bike-edit' } do |f|
   - if @bike.errors.any?
     = render partial: "/shared/errors", locals: { name: "Bike", obj: @bike }
@@ -170,103 +145,54 @@
       = link_to "Bike messages", admin_feedbacks_path(search_bike_id: @bike.to_param), class: "btn btn-outline-primary"
       = link_to "Delete bike", admin_bike_url(@bike), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger ml-4"
 
-  - if @bike.stolen and @bike.find_current_stolen_record.present?
-    %hr
+  - if @bike.stolen and @bike.current_stolen_record.present?
+    %h4.mt-4
+      Edit Stolen Record
     = f.fields_for :stolen_records do |s|
-      - if s.object.current
-        .row
-          .col-md-4.col-lg-3
-            #stolen-bike-location.form-group.fancy-select.unfancy
-              #country_select_container
-                = label :country, "Country"
-                = s.collection_select(:country_id, Country.all, :id, :name, prompt: "Choose country")
-                %p.d-none
-                  = Country.united_states.id
-          .col-md-4.col-lg-3
-            = label :street, "Intersection or address"
-            = s.text_field :street, placeholder: "Intersection or address", class: "form-control"
-          .col-md-4.col-lg-3
-            = label :city, "City"
-            = s.text_field :city, placeholder: "City", class: "form-control"
-          .col-md-4.col-lg-3
-            = label :zipcode, "Zipcode"
-            = s.text_field :zipcode, placeholder: "Zipcode", class: "form-control"
-          .col-md-4.col-lg-3.fancy-select.unfancy
-            = label :state, "State"
-            = s.collection_select(:state_id, State.all, :id, :name, include_blank: true, prompt: "State" )
-          .col-md-4.col-lg-3
-            .form-group
-              = label :theft_description, "Theft description"
-              = s.text_area :theft_description, placeholder: "Theft Description", class: "form-control"
-          .col-md-4.col-lg-3
-            .form-group
-              = f.label :estimated_value, "Estimated value"
-              = s.number_field :estimated_value, class: "form-control"
-          .col-md-4.col-lg-3
-            .form-group#stolen-check-box
-              = f.label :stolen, "Bike is stolen"
-              = f.check_box :stolen
-            #admin-recovery-fields{style: "display: none"}
-              .input-group
-                .form-group.large-text
-                  = label :mark_recovered_reason, "How was it recovered"
-                  #recovery_descr
-                    = text_area_tag :mark_recovered_reason, nil, rows: 3
-              .input-group
-                .form-group
-                  = label :mark_recovered_we_helped, "Did the bike index help?"
-                  = check_box_tag :mark_recovered_we_helped, true
-              .input-group
-                .form-group
-                  = label :can_share_recovery, "Can Share"
-                  = check_box_tag :can_share_recovery, true
-      - else
-        / Don't put anything
-        / Because there might be more stolen records and it breaks without
-        / an else
-%h3.mt-4
-  Ownerships
-.full-screen-table
-  %table.table.table-striped.table-bordered.table-sm
-    %thead.thead-light
-      %th.d-none.d-lg-table-cell
-        ID
-      %th
-        Created&nbsp;<small class="convertTimezone"></small>
-      %th
-        Creator
-      %th
-        Owner email
-      %th
-        Current?
-      %th
-        Claimed?
-      %th.d-none.d-md-table-cell
-        User hidden
-    %tbody
-      - @bike.ownerships.each do |ownership|
-        %tr
-          %td.d-none.d-lg-table-cell
-            = ownership.id
-          %td
-            %a.convertTime{href: edit_admin_ownership_url(ownership.id)}
-              = l ownership.created_at, format: :convert_time
-          %td
-            - u = ownership.creator
-            - if u.name.present?
-              = u.name
-            - else
-              = u.email
-          %td
-            = ownership.owner_email
-          %td.table-cell-check
-            = "&#x2713;".html_safe if ownership.current
-          %td.table-cell-check
-            = "&#x2713;".html_safe if ownership.claimed
-          %td.table-cell-check.d-none.d-md-table-cell
-            = "&#x2713;".html_safe if ownership.user_hidden
-
-- if @recoveries.any?
-  %h3.mt-4
-    Recoveries
-  = render partial: "/admin/recoveries/table", locals: { recoveries: @recoveries }
+      - next unless s.object.current
+      .row
+        .col-md-4.col-lg-3
+          #stolen-bike-location.form-group.fancy-select.unfancy
+            #country_select_container
+              = label :country, "Country"
+              = s.collection_select(:country_id, Country.all, :id, :name, prompt: "Choose country")
+              %p.d-none
+                = Country.united_states.id
+        .col-md-4.col-lg-3
+          = label :street, "Intersection or address"
+          = s.text_field :street, placeholder: "Intersection or address", class: "form-control"
+        .col-md-4.col-lg-3
+          = label :city, "City"
+          = s.text_field :city, placeholder: "City", class: "form-control"
+        .col-md-4.col-lg-3
+          = label :zipcode, "Zipcode"
+          = s.text_field :zipcode, placeholder: "Zipcode", class: "form-control"
+        .col-md-4.col-lg-3.fancy-select.unfancy
+          = label :state, "State"
+          = s.collection_select(:state_id, State.all, :id, :name, include_blank: true, prompt: "State" )
+        .col-md-4.col-lg-3
+          .form-group
+            = label :theft_description, "Theft description"
+            = s.text_area :theft_description, placeholder: "Theft Description", class: "form-control"
+        .col-md-4.col-lg-3
+          .form-group
+            = f.label :estimated_value, "Estimated value"
+            = s.number_field :estimated_value, class: "form-control"
+        .col-md-4.col-lg-3
+          .form-group#stolen-check-box
+            = f.label :stolen, "Bike is stolen"
+            = f.check_box :stolen
+          #admin-recovery-fields{style: "display: none"}
+            .input-group
+              .form-group.large-text
+                = label :mark_recovered_reason, "How was it recovered"
+                #recovery_descr
+                  = text_area_tag :mark_recovered_reason, nil, rows: 3
+            .input-group
+              .form-group
+                = label :mark_recovered_we_helped, "Did the bike index help?"
+                = check_box_tag :mark_recovered_we_helped, true
+            .input-group
+              .form-group
+                = label :can_share_recovery, "Can Share"
+                = check_box_tag :can_share_recovery, true
