--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -115,7 +115,7 @@
         Theft information
       - unless controller_name == "stolen_bikes"
         %span.float-right
-          = link_to "Admin Stolen Bike page", edit_admin_stolen_bike_url(bike)
+          = link_to "Stolen approval/message", edit_admin_stolen_bike_url(bike)
     .row
       .col-md-6
         %table.table-list
